scss/_navbar.scss
.navbar-expand-lg .navbar-nav .nav-link {
  padding-top: 1.25rem;
  padding-bottom: 1.25rem;
}

.navbar-nav button.nav-link {
  width: 100%;
  border: 0;
  background-color: $primary;
  text-align: left;
}

.navbar-dark .navbar-nav .nav-link:hover,
.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-brand:hover,
.navbar-dark .navbar-brand:focus, {
  background-color: rgba(0, 0, 0, 0.25);
}

.navbar-dark .navbar-nav .nav-link:focus,
.navbar-dark .navbar-brand:focus {
  outline: 2px solid currentColor;
  outline-offset: -2px;
}

.navbar-dark .navbar-nav .show > .nav-link,
.navbar-dark .navbar-nav .nav-link.active {
  background-image: linear-gradient(0deg, white 4px, transparent 4px);
}

.navbar-nav > li > .dropdown-menu {
  margin-top: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.navbar-brand {
  margin-inline-start: -.75rem;
  padding-inline-start: .9375rem;
  padding-inline-end: .9375rem;
}

